# cmake-boost-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/shared/: Bar.cpp  Bar.hpp  Foo.cpp  Foo.hpp
test/: CMakeLists.txt  test_bar.cpp  test_foo.cpp  test_main.cpp
